fix to the scrollbar showing up on chrome/edge

--- a/frontend/src/components/ControlPanel/ControlPanel.css
+++ b/frontend/src/components/ControlPanel/ControlPanel.css
@@ -6,8 +6,10 @@
 	scrollbar-width: none;
 }
 
-.control::-webkit-scrollbar {
+.control-panel::-webkit-scrollbar {
 	display: none;
+	width: 0px;
+	background: transparent;
 }
 
 .control-panel .control-collapsible-section {
